--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3> Instructions </h3>
         <p> This is a copycat of the New York Times game Wordle. Enter a 6-letter word to begin. 
             <br> The words do not have repeating letters. Every character is unique.
-            <br> <br> If the letter is present and in the correct place, the tile will turn green. If the word is present but not in the correct place, it will turn yellow. If the letter is not correct, it will turn red. 
+            <br> <br> If the letter is present and in the correct place, the tile will turn green. If the word is present but not in the correct place, it will turn yellow. If the letter is not correct, it will turn grey. 
             <br> <br> You have 7 guesses to correctly guess the word! </p>
     </div>
     <div class="container">
